workspaces/DC Dev/DC Dev/src/objects/Inventory__c.object
<CustomObject>
    <description>Holds the information about the media.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Holds the description of the media.</description>
        <inlineHelpText>Provide media information.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Holds the name of the media.</description>
        <inlineHelpText>Please enter the name of the media</inlineHelpText>
        <label>Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Cost for one copy of the media</description>
        <inlineHelpText>Enter the cost for one copy of media.</inlineHelpText>
        <label>Price</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Holds the number of copies of media in the inventory.</description>
        <inlineHelpText>Enter number from 0 to 999.</inlineHelpText>
        <label>Quantity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Media__c</fullName>
        <description>Holds the type of media stored.</description>
        <inlineHelpText>Select appropriate type of media.</inlineHelpText>
        <label>Type of Media</label>
        <picklist>
            <picklistValues>
                <fullName>Book</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>E-Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>Media Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>